--- a/web/views/Raports/report.html
+++ b/web/views/Raports/report.html
@@ -120,73 +120,24 @@
                     
                     <div class="chart-container">
                         <canvas id="ordersChart"></canvas>
-                    </div>
-                    <table>
-                        <thead>
-                        <tr>
-                            <th>Month - Year</th>
-                            <th>Amount</th>
-                        </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                            <td>2021-01</td>
-                            <td>$0</td>
-                        </tr>
-                        <tr>
-                            <td>2021-02</td>
-                            <td>$0</td>
-                        </tr>
-                        <tr>
-                            <td>2021-03</td>
-                            <td>$0</td>
-                        </tr>
-                        <tr>
-                            <td>2021-04</td>
-                            <td>$0</td>
-                        </tr>
-                        <tr>
-                            <td>2021-05</td>
-                            <td>$182.31</td>
-                        </tr>
-                        <tr>
-                            <td>2021-06</td>
-                            <td>$0</td>
-                        </tr>
-                        <tr>
-                            <td>2021-07</td>
-                            <td>$0</td>
-                        </tr>
-                        <tr>
-                            <td>2021-08</td>
-                            <td>$19.36</td>
-                        </tr>
-                        <tr>
-                            <td>2021-09</td>
-                            <td>$0</td>
-                        </tr>
-                        <tr>
-                            <td>2021-10</td>
-                            <td>$0</td>
-                        </tr>
-                        <tr>
-                            <td>2021-11</td>
-                            <td>$0</td>
-                        </tr>
-                        <tr>
-                            <td>2021-12</td>
-                            <td>$0</td>
-                        </tr>
-                        </tbody>
-                        <tfoot>
-                        <tr>
-                            <th>Total Amount</th>
-                            <th>$201.67</th>
-                        </tr>
-                    </tfoot>
-                    </table>
-                
-            
+
+                        <table>
+                            <thead>
+                                <tr>
+                                    <th>Month - Year</th>
+                                    <th>Amount</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <!-- Data will be inserted here by JavaScript -->
+                            </tbody>
+                            <tfoot>
+                                <tr>
+                                    <th>Total Amount</th>
+                                    <th>$0.00</th>
+                                </tr>
+                            </tfoot>
+                        </table>
                     
                 </div>
             </div> 
